@@ -8,4 +8,6 @@ The Distutils-SIG web page is also a good starting point:
 
     http://www.python.org/sigs/distutils-sig/
 
+WARNING : Distutils must remain compatible with 2.3
+
 $Id$
